--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,18 +13,23 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">* {
+	background-color: #808080;
+}</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>240</y>
+      <x>610</x>
+      <y>10</y>
       <width>151</width>
-      <height>81</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>autorize</string>
+     <string>Authorization</string>
     </property>
    </widget>
   </widget>
