--- a/productitem.ui
+++ b/productitem.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
+    <width>700</width>
     <height>250</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>500</width>
+    <width>700</width>
     <height>250</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>500</width>
+    <width>700</width>
     <height>250</height>
    </size>
   </property>
@@ -37,7 +37,7 @@
   <widget class="QLabel" name="product_name">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>10</x>
      <y>20</y>
      <width>471</width>
      <height>31</height>
@@ -53,9 +53,9 @@
   <widget class="QLabel" name="product_desc">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>90</y>
-     <width>141</width>
+     <x>10</x>
+     <y>70</y>
+     <width>471</width>
      <height>31</height>
     </rect>
    </property>
@@ -90,6 +90,38 @@
    </property>
    <property name="text">
     <string>Cancel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>140</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font-size: 18px</string>
+   </property>
+   <property name="text">
+    <string>₴</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="product_price">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>140</y>
+     <width>81</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font-size: 18px</string>
+   </property>
+   <property name="text">
+    <string>Price</string>
    </property>
   </widget>
  </widget>
