--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -93,6 +93,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="placeholderText">
+     <string>Search some product...</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
