Now the 'Cart' button opens a window with a shopping cart, but without functionality yet.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -71,7 +71,7 @@
      <string>Products:</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="cart">
+   <widget class="QPushButton" name="cart_btn">
     <property name="geometry">
      <rect>
       <x>340</x>
