--- a/cartwindow.ui
+++ b/cartwindow.ui
@@ -48,7 +48,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>420</y>
+     <y>440</y>
      <width>91</width>
      <height>41</height>
     </rect>
@@ -61,7 +61,7 @@
    <property name="geometry">
     <rect>
      <x>280</x>
-     <y>420</y>
+     <y>440</y>
      <width>91</width>
      <height>41</height>
     </rect>
@@ -74,7 +74,7 @@
    <property name="geometry">
     <rect>
      <x>390</x>
-     <y>420</y>
+     <y>440</y>
      <width>91</width>
      <height>41</height>
     </rect>
@@ -91,6 +91,57 @@
      <width>451</width>
      <height>301</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>389</y>
+     <width>51</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font-size: 18px
+</string>
+   </property>
+   <property name="text">
+    <string>Total:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="total_sum">
+   <property name="geometry">
+    <rect>
+     <x>73</x>
+     <y>390</y>
+     <width>91</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font-size: 18px
+</string>
+   </property>
+   <property name="text">
+    <string>&lt;sum&gt;</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>390</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font-size: 18px
+</string>
+   </property>
+   <property name="text">
+    <string>₴</string>
    </property>
   </widget>
  </widget>
