--- a/cartwindow.ui
+++ b/cartwindow.ui
@@ -33,7 +33,7 @@
     <rect>
      <x>200</x>
      <y>30</y>
-     <width>91</width>
+     <width>151</width>
      <height>31</height>
     </rect>
    </property>
@@ -41,7 +41,7 @@
     <string notr="true">font-size: 20px;</string>
    </property>
    <property name="text">
-    <string>Your Cart</string>
+    <string>Ваша Корзина</string>
    </property>
   </widget>
   <widget class="QPushButton" name="Cart_cancel_btn">
@@ -54,7 +54,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Cancel</string>
+    <string>Вiдмiна</string>
    </property>
   </widget>
   <widget class="QPushButton" name="Cart_Delete_Btn">
@@ -67,7 +67,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Delete</string>
+    <string>Видалити</string>
    </property>
   </widget>
   <widget class="QListWidget" name="CartlistWidget">
@@ -85,7 +85,7 @@
     <rect>
      <x>20</x>
      <y>389</y>
-     <width>51</width>
+     <width>71</width>
      <height>16</height>
     </rect>
    </property>
@@ -94,13 +94,13 @@
 </string>
    </property>
    <property name="text">
-    <string>Total:</string>
+    <string>Усього:</string>
    </property>
   </widget>
   <widget class="QLabel" name="total_sum">
    <property name="geometry">
     <rect>
-     <x>73</x>
+     <x>100</x>
      <y>390</y>
      <width>91</width>
      <height>16</height>
@@ -117,7 +117,7 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>200</x>
      <y>390</y>
      <width>16</width>
      <height>16</height>
