--- a/create_accountwindow.ui
+++ b/create_accountwindow.ui
@@ -41,7 +41,7 @@
     <string notr="true">font-size: 20px;</string>
    </property>
    <property name="text">
-    <string>CREATE AN ACCOUNT</string>
+    <string>СТВОРИТИ АККАУНТ</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
@@ -57,7 +57,7 @@
     <string notr="true">font-size: 15px;</string>
    </property>
    <property name="text">
-    <string>Enter your Name</string>
+    <string>Введiть своє iм'я</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
@@ -65,7 +65,7 @@
     <rect>
      <x>30</x>
      <y>200</y>
-     <width>151</width>
+     <width>181</width>
      <height>16</height>
     </rect>
    </property>
@@ -73,7 +73,7 @@
     <string notr="true">font-size: 15px;</string>
    </property>
    <property name="text">
-    <string>Enter your surname</string>
+    <string>Введiть своє призвiще</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
@@ -81,7 +81,7 @@
     <rect>
      <x>30</x>
      <y>270</y>
-     <width>131</width>
+     <width>171</width>
      <height>16</height>
     </rect>
    </property>
@@ -89,7 +89,7 @@
     <string notr="true">font-size: 15px;</string>
    </property>
    <property name="text">
-    <string>Enter your Email</string>
+    <string>Введiть свою пошту</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_5">
@@ -97,7 +97,7 @@
     <rect>
      <x>30</x>
      <y>340</y>
-     <width>161</width>
+     <width>201</width>
      <height>16</height>
     </rect>
    </property>
@@ -105,7 +105,7 @@
     <string notr="true">font-size: 15px;</string>
    </property>
    <property name="text">
-    <string>Enter your Password</string>
+    <string>Придумайте свiй пароль</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="createAccount_name">
@@ -121,7 +121,7 @@
     <string notr="true">background-color: rgb(255, 196, 217);</string>
    </property>
    <property name="placeholderText">
-    <string>Name...</string>
+    <string>iм'я...</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="createAccount_surname">
@@ -137,7 +137,7 @@
     <string notr="true">background-color: rgb(255, 196, 217);</string>
    </property>
    <property name="placeholderText">
-    <string>Surname...</string>
+    <string>призвiще...</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="createAccount_email">
@@ -153,7 +153,7 @@
     <string notr="true">background-color: rgb(255, 196, 217);</string>
    </property>
    <property name="placeholderText">
-    <string>Email...</string>
+    <string>пошта...</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="createAccount_password">
@@ -169,7 +169,7 @@
     <string notr="true">background-color: rgb(255, 196, 217);</string>
    </property>
    <property name="placeholderText">
-    <string>Password...</string>
+    <string>пароль...</string>
    </property>
   </widget>
   <widget class="QPushButton" name="createAccount_login">
@@ -182,7 +182,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Already have an account?</string>
+    <string>Вже маєте аккаунт?</string>
    </property>
   </widget>
   <widget class="QPushButton" name="createAccountBtn">
@@ -195,7 +195,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Create</string>
+    <string>Створити</string>
    </property>
   </widget>
   <widget class="QPushButton" name="createAccount_cancel_btn">
@@ -208,7 +208,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Cancel</string>
+    <string>Вiдмiна</string>
    </property>
   </widget>
  </widget>
