--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -48,9 +48,9 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>90</y>
+      <y>140</y>
       <width>451</width>
-      <height>391</height>
+      <height>341</height>
      </rect>
     </property>
    </widget>
@@ -95,6 +95,33 @@
     </property>
     <property name="placeholderText">
      <string>Пошук...</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>100</y>
+      <width>91</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font-size: 15px;
+</string>
+    </property>
+    <property name="text">
+     <string>Категорiя:</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="category_Combo_Box">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>100</y>
+      <width>191</width>
+      <height>22</height>
+     </rect>
     </property>
    </widget>
   </widget>
