--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -101,9 +101,9 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>100</y>
+      <y>90</y>
       <width>91</width>
-      <height>21</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -118,10 +118,27 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>100</y>
+      <y>91</y>
       <width>191</width>
-      <height>22</height>
+      <height>31</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="AdminPanelBtn">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>90</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 191, 30);
+color: #000;</string>
+    </property>
+    <property name="text">
+     <string>Адмiн Панель</string>
     </property>
    </widget>
   </widget>
