--- a/productitem.ui
+++ b/productitem.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>700</width>
-    <height>250</height>
+    <height>500</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>700</width>
-    <height>250</height>
+    <height>500</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>700</width>
-    <height>250</height>
+    <height>500</height>
    </size>
   </property>
   <property name="sizeIncrement">
@@ -55,7 +55,7 @@
     <rect>
      <x>10</x>
      <y>70</y>
-     <width>471</width>
+     <width>671</width>
      <height>31</height>
     </rect>
    </property>
@@ -69,8 +69,8 @@
   <widget class="QPushButton" name="product_add_to_cart_btn">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>190</y>
+     <x>530</x>
+     <y>440</y>
      <width>151</width>
      <height>41</height>
     </rect>
@@ -82,8 +82,8 @@
   <widget class="QPushButton" name="product_cancel_btn">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>190</y>
+     <x>410</x>
+     <y>440</y>
      <width>80</width>
      <height>41</height>
     </rect>
@@ -122,6 +122,19 @@
    </property>
    <property name="text">
     <string>Price</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="productImageLabel">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>180</y>
+     <width>631</width>
+     <height>231</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
