--- a/cartwindow.ui
+++ b/cartwindow.ui
@@ -33,7 +33,7 @@
     <rect>
      <x>200</x>
      <y>30</y>
-     <width>151</width>
+     <width>131</width>
      <height>31</height>
     </rect>
    </property>
@@ -41,7 +41,7 @@
     <string notr="true">font-size: 20px;</string>
    </property>
    <property name="text">
-    <string>Ваша Корзина</string>
+    <string>Ваш Кошик</string>
    </property>
   </widget>
   <widget class="QPushButton" name="Cart_cancel_btn">
@@ -102,7 +102,7 @@
     <rect>
      <x>100</x>
      <y>390</y>
-     <width>91</width>
+     <width>131</width>
      <height>16</height>
     </rect>
    </property>
@@ -117,7 +117,7 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>230</x>
      <y>390</y>
      <width>16</width>
      <height>16</height>
